--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flowchart",
+  "name": "minesweeper",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,11 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.18.0",
     "babel-loader": "^8.0.2",
     "bootstrap-less-port": "^0.3.0",
     "bootstrap-vue": "^2.0.0-rc.11",
-    "flowchart.js": "^1.11.3",
     "font-awesome": "^4.7.0",
     "less": "^3.8.1",
     "lodash": "^4.17.11",
